more name changes

--- a/public/images/favicon/manifest.json
+++ b/public/images/favicon/manifest.json
@@ -1,5 +1,5 @@
 {
-  "name": "mldangelo.com",
+  "name": "upasana.ovh",
   "icons": [
     {
       "src": "/images/favicon/android-icon-36x36.png",
