added multiblock and email

--- a/package.json
+++ b/package.json
@@ -24,6 +24,8 @@
   "dependencies": {
     "@payloadcms/admin-bar": "3.48.0",
     "@payloadcms/db-mongodb": "3.48.0",
+    "@payloadcms/email-nodemailer": "^3.48.0",
+    "@payloadcms/email-resend": "^3.48.0",
     "@payloadcms/live-preview-react": "3.48.0",
     "@payloadcms/next": "3.48.0",
     "@payloadcms/payload-cloud": "3.48.0",
@@ -32,8 +34,8 @@
     "@payloadcms/plugin-redirects": "3.48.0",
     "@payloadcms/plugin-search": "3.48.0",
     "@payloadcms/plugin-seo": "3.48.0",
-    "@payloadcms/richtext-lexical": "^3.48.0",
-    "@payloadcms/storage-vercel-blob": "^3.48.0",
+    "@payloadcms/richtext-lexical": "3.48.0",
+    "@payloadcms/storage-vercel-blob": "3.48.0",
     "@payloadcms/ui": "3.48.0",
     "@radix-ui/react-checkbox": "^1.0.4",
     "@radix-ui/react-label": "^2.0.2",
@@ -48,7 +50,7 @@
     "lucide-react": "^0.378.0",
     "next": "15.3.3",
     "next-sitemap": "^4.2.3",
-    "payload": "^3.48.0",
+    "payload": "3.48.0",
     "prism-react-renderer": "^2.3.1",
     "react": "19.1.0",
     "react-dom": "19.1.0",
