hero image on posts

--- a/package.json
+++ b/package.json
@@ -24,8 +24,8 @@
   "dependencies": {
     "@payloadcms/admin-bar": "3.48.0",
     "@payloadcms/db-mongodb": "3.48.0",
-    "@payloadcms/email-nodemailer": "^3.48.0",
-    "@payloadcms/email-resend": "^3.48.0",
+    "@payloadcms/email-nodemailer": "3.48.0",
+    "@payloadcms/email-resend": "3.48.0",
     "@payloadcms/live-preview-react": "3.48.0",
     "@payloadcms/next": "3.48.0",
     "@payloadcms/payload-cloud": "3.48.0",
